# SkyMesh

./: README.md  rf_controller.c  rf_controller.h  run_build.sh
docs/: PROJECT.md  README.md
docs/assets/: design-specs.md
docs/assets/diagrams/: README.md  ground_station_architecture.svg.bak  power_subsystem_diagram.svg.bak
docs/assets/logos/: README.md
docs/assets/schematics/: adcs_schematic.md  obc_carrier_schematic.md  power_distribution_schematic.md  rf_frontend_schematic.md  system_integration_schematic.md
docs/business/: roadmap.md  strategy.md
docs/technical/: TECHNICAL_SPEC.md  architecture.md
hardware/: README.md
scripts/: setup_dev_env.sh
src/ground-station/: README.md
src/mesh-network/: README.md
src/satellite-os/: README.md
src/satellite-os/core/: CMakeLists.txt  build.sh
src/satellite-os/core/include/skymesh/core/: command_control.h  health_monitor.h  orbital_task_manager.h  power_manager.h
src/satellite-os/core/src/: health_monitor.cpp  orbital_task_manager.cpp  power_manager.cpp
src/satellite-os/core/tests/: orbital_task_manager_test.cpp  test_radiation_hardening.cpp  test_utils.h
tests/: README.md
